# rust-mailjet

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: test-beta.yml  test-nightly.yml  test-stable.yml  test.yml
doc/: add_email_headers.md  add_url_tags.md  create_a_contact.md  create_a_contact_list.md  delete_a_contact.md  group_into_a_campaign.md  retrieve_a_contact.md  send_basic_email.md  send_in_bulk.md  send_with_attached_files.md  set_global_properties.md  tag_email_messages.md  use_a_template.md
src/: lib.rs  mailjet.rs
src/data/: attachment.rs  contact.rs  contact_identifier.rs  contacts_list.rs  contacts_list_identifier.rs  email_address.rs  message.rs  message_data.rs  message_history_data.rs  message_history_information.rs  message_information.rs  message_information_data.rs  mod.rs  response_error.rs  response_message.rs  response_success.rs
src/macros/: log.rs
src/requests/: contact_request.rs  contact_search_request.rs  contacts_list_request.rs  contacts_list_search_request.rs  message_information_request.rs  message_request.rs  mod.rs  send_request.rs
src/responses/: generic_response.rs  message_history_response.rs  message_information_response.rs  message_response.rs  mod.rs  response.rs  send_response.rs
src/traits/: mod.rs  url_encoded_request.rs
