[package]
name = "mailjet_api_wrapper"
version = "0.3.1"
edition = "2021"
authors = ["Camille Nevermind"]
description = "Unofficial wrapper for Mailjet's API"
readme = "README.md"
repository = "https://github.com/nevermille/rust-mailjet"
license = "LGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde_json = "1.0.96"
serde = { version = "1.0.160", features = ["derive"] }
curl = "0.4.44"
url-builder = "0.1.1"

[dev-dependencies]

rand = "0.8.5"
